--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "devDependencies": {
     "del-cli": "^4.0.0",
+    "prettier": "2.3.2",
     "typescript": "^4.3.2"
   },
   "dependencies": {}
