--- a/package.json
+++ b/package.json
@@ -19,5 +19,7 @@
     "prettier": "2.3.2",
     "typescript": "^4.3.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "assert": "^2.0.0"
+  }
 }
